# dlzoom

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  js.yml  release.yml  secret-scanning.yml
docs/: _config.yml  architecture.md  index.md  robots.txt
docs/zoom-app/: doc.md  index.md  privacy.md  support.md  terms.md
src/dlzoom/: __init__.py  audio_extractor.py  cli.py  config.py  downloader.py  exceptions.py  handlers.py  logger.py  login.py  logout.py  output.py  recorder_selector.py  stj_minimizer.py  templates.py  token_store.py  whoami.py  zoom_client.py  zoom_user_client.py
tests/: cli_test_utils.py  test_audio_extractor.py  test_batch_download_scope.py  test_check_availability.py  test_cli.py  test_cli_date_ranges.py  test_cli_path_expansion.py  test_cli_scope_resolution.py  test_config.py  test_date_chunking.py  test_download_batch_cli.py  test_download_check_availability_cli.py  test_download_skip_speakers_cli.py  test_downloader.py  test_handlers_silent_state.py  test_output.py  test_recorder_selector.py  test_recordings_command.py  test_recordings_iteration.py  test_scope_errors.py  test_stj_integration.py  test_stj_minimizer.py  test_templates.py  test_uuid_encoding.py  test_zoom_client.py
tests/integration/: test_download_flow.py  test_login_flow.py
tests/unit/: test_handlers_token_retrieval.py
zoom-broker/: .cloudflare-builds  CLOUDFLARE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  QUICKSTART_CICD.md  README.md  package-lock.json  package.json  wrangler.jsonc
zoom-broker/scripts/: apply-kv-placeholders.mjs  setup-kv.sh  setup-secrets.sh  wrangler-local.sh
zoom-broker/src/: index.js
zoom-broker/test/: index.spec.js
