[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlzoom"
version = "0.3.1"
description = "CLI tool to download Zoom cloud recordings and extract audio for transcription"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yaniv Golan", email = "yaniv@golan.name"}
]
maintainers = [
    {name = "Yaniv Golan", email = "yaniv@golan.name"}
]
keywords = ["zoom", "recording", "download", "audio", "transcription", "api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "rich-click>=1.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<10.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "responses>=0.24.0,<1.0.0",
    "black>=24.3.0,<26.0.0",
    "ruff>=0.6.0,<0.7.0",
    "mypy>=1.9.0,<2.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "ipython>=8.18.0,<10.0.0",
    "pre-commit>=3.6.0,<5.0.0",
]

[project.scripts]
dlzoom = "dlzoom.cli:cli"

[project.urls]
Homepage = "https://github.com/yaniv-golan/dlzoom"
Repository = "https://github.com/yaniv-golan/dlzoom"
Issues = "https://github.com/yaniv-golan/dlzoom/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=dlzoom --cov-report=term-missing --cov-report=html"
